feat: add createdDateSimply key for fronted render
